Make the sample configuration file more generic.

--- a/remote-control/nao_server/conf/server.conf.sample
+++ b/remote-control/nao_server/conf/server.conf.sample
@@ -7,9 +7,9 @@
 # port = 9526
 
 # if these aren't listed the script will look for things in a certs
-# directory beside the script (assumes that hostname is nao1.ad.nr.no:
-# certs/nao1.ad.nr.no.key
-# certs/nao1_ad_nr_no_cert.cer
+# directory beside the script (assumes that hostname is nao.example.com):
+# certs/nao.example.com.key
+# certs/nao_example_com_cert.cer
 
 # keyfile = /path/to/certs/cert.key
 # certfile = /path/to/certs/cert.cer
