Fix defaults in the server and the sample config so it works
We fixed the defaults to work for nao.local. This should work for the
basics outlined in the config file. We also copy over the sample to
an actual config if nothing is there. That way there is a
configuration file to work with.

--- a/remote-control/nao_server/conf/server.conf.sample
+++ b/remote-control/nao_server/conf/server.conf.sample
@@ -8,8 +8,8 @@
 
 # if these aren't listed the script will look for things in a certs
 # directory beside the script (assumes that hostname is nao.example.com):
-# certs/nao.example.com.key
-# certs/nao_example_com_cert.cer
+# /home/nao/remote_control/nao_server/certs/nao.example.com.key
+# /home/nao/remote_control/nao_server/certs/nao_example_com_cert.cer
 
 # keyfile = /path/to/certs/cert.key
 # certfile = /path/to/certs/cert.cer
